# deva-shared

./: Cargo.toml  README.md
crates/azure_devops/: Cargo.toml
crates/azure_devops/src/: client.rs  error.rs  lib.rs  models.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  config_test.rs  error.rs  error_test.rs  lib.rs  logging.rs  logging_test.rs  types.rs  workspace_test.rs
crates/generator/: Cargo.toml
crates/generator/src/: error.rs  generator.rs  generator_test.rs  lib.rs  net_generator.rs  net_generator_test.rs  next_generator.rs  next_generator_test.rs  templates.rs
crates/github/: Cargo.toml
crates/github/src/: client.rs  error.rs  models.rs  webhooks.rs
crates/telegram/: Cargo.toml
crates/telegram/src/: bot.rs
