[package]
name = "deva-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
deva-core = { path = "../core" }
handlebars = "6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["fs"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10"
