[package]
name = "deva-github"
version = "0.1.0"
edition = "2021"

[dependencies]
deva-core = { path = "../core" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["test"] }
