[package]
name = "deva-telegram"
version = "0.1.0"
edition = "2021"

[dependencies]
deva-core = { path = "../core" }
teloxide = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["test"] }
